proj1/testing/error/notARotor.inp
* B BETA I III VI (AAAA)
HELLO WORLD